# causaliq-workflow

./: 404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
api/: index.html
api/actions/: index.html
api/cache/: index.html
api/cli/: index.html
api/examples/: index.html
api/logging/: index.html
api/overview/: index.html
api/registry/: index.html
api/schema/: index.html
api/status/: index.html
api/workflow/: index.html
architecture/action_architecture_design/: index.html
architecture/action_auto_discovery_design/: index.html
architecture/cache_object_model/: index.html
architecture/logging_architecture_design/: index.html
architecture/matrix_expansion_design/: index.html
architecture/overview/: index.html
architecture/results_cache_design/: index.html
architecture/summarisation_paradigm_design/: index.html
architecture/workflow_cache_design/: index.html
architecture/workflow_executor_design/: index.html
design/action_architecture_design/: index.html
docs/: api.md  example_workflows.md  index.md  roadmap.md  technical_architecture.md
docs/api/: actions.md  cache.md  (+8 more)
example_workflows/: index.html
roadmap/: index.html
scripts/: activate.ps1  build-and-publish.ps1  setup-env.ps1
search/: search_index.json
technical_architecture/: index.html
tests/functional/fixtures/my_analysis_action/: README.md  __init__.py  pyproject.toml
tests/functional/fixtures/test_action/: __init__.py  pyproject.toml
userguide/: index.html
(+100 files in other folders)
