[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-analysis-action"
version = "1.0.0"
description = "Simple analysis action with no external dependencies"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]