[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_action"
version = "1.0.0"
description = "Test action package for causaliq-workflow"
authors = [{name = "CausalIQ", email = "info@causaliq.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "causaliq-workflow>=0.1.0",
]

[project.urls]
"Homepage" = "https://github.com/causaliq/test-action"
"Repository" = "https://github.com/causaliq/test-action"
"Documentation" = "https://github.com/causaliq/test-action"

[tool.setuptools.packages.find]
where = ["."]
include = ["test_action*"]

[tool.setuptools.package-dir]
"" = "."